--- a/Semester1_D001_Escape_Room_Rosenberg/Semester1_D001_Escape_Room_Rosenberg/Semester1_D001_Escape_Room_Rosenberg.csproj
+++ b/Semester1_D001_Escape_Room_Rosenberg/Semester1_D001_Escape_Room_Rosenberg/Semester1_D001_Escape_Room_Rosenberg.csproj
@@ -7,4 +7,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="NewFolder\**" />
+    <EmbeddedResource Remove="NewFolder\**" />
+    <None Remove="NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Refactored\GameBoardObjects\Player\" />
+  </ItemGroup>
+
 </Project>
