--- a/Semester1_D001_Escape_Room_Rosenberg/Semester1_D001_Escape_Room_Rosenberg/Semester1_D001_Escape_Room_Rosenberg.csproj
+++ b/Semester1_D001_Escape_Room_Rosenberg/Semester1_D001_Escape_Room_Rosenberg/Semester1_D001_Escape_Room_Rosenberg.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Refactored\GameBoardObjects\Door\" />
     <Folder Include="Refactored\GameBoardObjects\Player\" />
   </ItemGroup>
 
