--- a/Semester1_D001_Escape_Room_Rosenberg/Semester1_D001_Escape_Room_Rosenberg/Semester1_D001_Escape_Room_Rosenberg.csproj
+++ b/Semester1_D001_Escape_Room_Rosenberg/Semester1_D001_Escape_Room_Rosenberg/Semester1_D001_Escape_Room_Rosenberg.csproj
@@ -13,4 +13,14 @@
     <None Remove="NewFolder\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Refactored\GameBoardObjects\Npc\NpcData\npc_questions.txt.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Refactored\GameBoardObjects\Npc\NpcData\npc_questions.txt.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
